--- a/main/backend/capstone_project/requirements.txt
+++ b/main/backend/capstone_project/requirements.txt
@@ -6,6 +6,7 @@ cryptography==3.4.6
 defusedxml==0.6.0
 Django==3.1.6
 django-allauth==0.44.0
+django-cors-headers==3.7.0
 django-rest-auth==0.9.5
 djangorestframework==3.12.2
 djangorestframework-jwt==1.11.0
