--- a/main/frontend/package.json
+++ b/main/frontend/package.json
@@ -21,9 +21,13 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-youtube": "^7.13.1",
     "reactstrap": "^8.9.0",
+    "rechart": "0.0.1",
+    "recharts": "^2.0.9",
     "socket.io-client": "^4.0.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "youtube-api-search": "0.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
