--- a/main/frontend/package.json
+++ b/main/frontend/package.json
@@ -13,11 +13,13 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "fontsource-roboto": "^4.0.0",
+    "material-ui-upload": "^1.2.1",
     "query-string": "^7.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.0.1",
