--- a/main/frontend/package.json
+++ b/main/frontend/package.json
@@ -5,30 +5,28 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "antd": "^4.13.1",
+    "antd": "^4.15.4",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "fontsource-roboto": "^4.0.0",
-    "jquery": "^3.6.0",
+    "material-ui-upload": "^1.2.1",
+    "mdbreact": "^5.0.2",
     "query-string": "^7.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
+    "react-camera-pro": "^1.1.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-youtube": "^7.13.1",
-    "reactstrap": "^8.9.0",
-    "rechart": "0.0.1",
-    "recharts": "^2.0.9",
+    "react-webcam": "^5.2.3",
     "socket.io-client": "^4.0.1",
-    "web-vitals": "^1.0.1",
-    "youtube-api-search": "0.0.5"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
