--- a/main/frontend/package.json
+++ b/main/frontend/package.json
@@ -23,6 +23,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-images-upload": "^1.2.8",
+    "react-naver-maps": "0.0.13",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
@@ -33,6 +34,8 @@
     "recharts": "^2.0.9",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.0.1",
+    "styled-components": "^5.3.0",
+    "styled-reset": "^4.3.4",
     "web-vitals": "^1.0.1",
     "youtube-api-search": "0.0.5"
   },
