--- a/main/backend/capstone_project/requirements.txt
+++ b/main/backend/capstone_project/requirements.txt
@@ -2,7 +2,7 @@ aioredis==1.3.1
 asgiref==3.3.1
 async-timeout==3.0.1
 attrs==20.3.0
-autobahn==21.3.1
+# autobahn==21.3.1
 Automat==20.2.0
 beautifulsoup4==4.9.3
 certifi==2020.12.5
@@ -27,7 +27,7 @@ hyperlink==21.0.0
 idna==2.10
 incremental==21.3.0
 msgpack==1.0.2
-mysqlclient==2.0.3
+# mysqlclient==2.0.3
 oauthlib==3.1.0
 Pillow==8.2.0
 pyasn1==0.4.8
@@ -35,7 +35,7 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 PyJWT==1.7.1
 pyOpenSSL==20.0.1
-pyowm==3.2.0
+# pyowm==3.2.0
 PySocks==1.7.1
 python3-openid==3.2.0
 pytz==2021.1
