--- a/main/frontend/package.json
+++ b/main/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.1",
     "react-images-upload": "^1.2.8",
     "react-naver-maps": "0.0.13",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
