--- a/main/backend/capstone_project/.config/nginx/mysite.conf
+++ b/main/backend/capstone_project/.config/nginx/mysite.conf
@@ -8,4 +8,8 @@ server {
         uwsgi_pass  unix:///tmp/mysite.sock;
         include     uwsgi_params;
     }
+
+    location /static/ {
+        alias /srv/capstone-2021-5/main/backend/capstone_project/static/;
+    }
 }
