--- a/main/backend/capstone_project/.config/nginx/mysite.conf
+++ b/main/backend/capstone_project/.config/nginx/mysite.conf
@@ -12,4 +12,8 @@ server {
     location /static/ {
         alias /srv/capstone-2021-5/main/backend/capstone_project/static/;
     }
+
+    if ($http_x_forwarded_proto = 'http'){
+    return 301 https://$host$request_uri;
+    }
 }
