--- a/main/backend/capstone_project/.config/nginx/mysite.conf
+++ b/main/backend/capstone_project/.config/nginx/mysite.conf
@@ -14,6 +14,13 @@ server {
         alias /srv/capstone-2021-5/main/backend/capstone_project/static/;
     }
 
+      location /wss/ {
+        proxy_pass http://127.0.0.1:6379;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
     if ($http_x_forwarded_proto = 'http'){
     return 301 https://$host$request_uri;
     }
