--- a/main/backend/capstone_project/.config/nginx/mysite.conf
+++ b/main/backend/capstone_project/.config/nginx/mysite.conf
@@ -20,14 +20,14 @@ server {
     return 301 https://$host$request_uri;
     }
         location /ws {
-
-                proxy_pass http://localhost:8443;
-
-                proxy_http_version 1.1;
-
-                proxy_set_header Upgrade $http_upgrade;
-
-                proxy_set_header Connection "upgrade";
-
-        }
+         proxy_pass http://127.0.0.1:8001;
+         proxy_http_version 1.1;
+         proxy_set_header Upgrade $http_upgrade;
+         proxy_set_header Connection "upgrade";
+         proxy_redirect     off;
+         proxy_set_header   Host $host;
+         proxy_set_header   X-Real-IP $remote_addr;
+         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+         proxy_set_header   X-Forwarded-Host $server_name;
+     }
 }
