--- a/main/backend/capstone_project/.config/nginx/mysite.conf
+++ b/main/backend/capstone_project/.config/nginx/mysite.conf
@@ -31,3 +31,12 @@ server {
          proxy_set_header   X-Forwarded-Host $server_name;
      }
 }
+
+server {
+   listen 3000;
+   location / {
+      root /srv/capstone-2021-5/main/frontend/build;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+   }
+}
